Fixing overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,7 +143,7 @@ body {
     color: #222;
     opacity: 1;
     display: block;
-    max-height: 80vh;
+    max-height: 70vh;
     overflow: auto;
     margin-top: 20px;
     padding: 16px;
